[Issue#1] Adding functions to get and create tasks
